Allow {snd,net}drv[0123...] to override a specific card only

--- a/mklivecd/src/hwdetect.in
+++ b/mklivecd/src/hwdetect.in
@@ -21,7 +21,7 @@
 # Adapted for mklivecd from the MiniCD (http://www.linuxminicd.org) hwdetect script
 # The latest version of this script can be found at http://livecd.berlios.de
 #
-# $Id: hwdetect.in,v 1.95 2004/01/21 09:59:37 jaco Exp $
+# $Id: hwdetect.in,v 1.96 2004/01/21 18:18:55 jaco Exp $
 #
 
 use lib qw(/usr/lib/libDrakX);
@@ -675,7 +675,7 @@ sub hwdetect_getsound {
 	my $num = 0;
 	foreach my $card (@probed_cards) {
 		my ($probed_vendor, $probed_desc) = split(/\|/, $card->{description});
-		my $driver = defined($cmdline{'snddrv'}) ? $cmdline{'snddrv'} : $card->{driver};
+		my $driver = defined($cmdline{'snddrv'}) ? $cmdline{'snddrv'} : (defined($cmdline{snddrv$num}) ? $cmdline{snddrv$num} : $card->{driver});
 		
 		modules::add_alias("sound-slot-$num", $driver);
 		print "modules::add_alias('sound-slot-$num', '$driver')\n" if ($debug);
@@ -707,7 +707,7 @@ sub hwdetect_getnetwork {
 	my $num = 0;
 	foreach my $card (@probed_cards) {
 		my ($probed_vendor, $probed_desc) = split(/\|/, $card->{description});
-		my $driver = defined($cmdline{'netdrv'}) ? $cmdline{'netdrv'} : $card->{driver};
+		my $driver = defined($cmdline{'netdrv'}) ? $cmdline{'netdrv'} : (defined($cmdline{netdrv$num}) ? $cmdline{netdrv$num} : $card->{driver});
 		
 		modules::add_alias("eth$num", $driver) unless ($probe);
 		print "modules::add_alias('eth$num', '$driver')\n" if ($debug);
