--- a/mklivecd/src/hwdetect.in
+++ b/mklivecd/src/hwdetect.in
@@ -21,7 +21,7 @@
 # Adapted for mklivecd from the MiniCD (http://www.linuxminicd.org) hwdetect script
 # The latest version of this script can be found at http://livecd.berlios.de
 #
-# $Id: hwdetect.in,v 1.98 2004/01/22 05:18:56 jaco Exp $
+# $Id: hwdetect.in,v 1.99 2004/01/22 05:24:21 jaco Exp $
 #
 
 use lib qw(/usr/lib/libDrakX);
@@ -570,7 +570,11 @@ sub hwdetect_getvideo {
 	}
 	else {
 		print_warning();
-		$probed_card = { Driver => 'fbdev', description => 'Linux|Default Framebuffer Device' };
+		$probed_card = { 
+			Driver      => 'fbdev', 
+			description => 'Linux|Default Framebuffer Device', 
+			VideoRam    => 4096
+		};
 		my ($probed_vendor, $probed_desc) = split(/\|/, $card->{description});
 		hwdetect_loadmod('unknown', $probed_vendor, $card->{card_name});
 	}
