--- a/mklivecd/src/hwdetect.in
+++ b/mklivecd/src/hwdetect.in
@@ -21,7 +21,7 @@
 # Adapted for mklivecd from the MiniCD (http://www.linuxminicd.org) hwdetect script
 # The latest version of this script can be found at http://livecd.berlios.de
 #
-# $Id: hwdetect.in,v 1.100 2004/01/22 05:29:01 jaco Exp $
+# $Id: hwdetect.in,v 1.101 2004/01/22 05:52:50 jaco Exp $
 #
 
 use lib qw(/usr/lib/libDrakX);
@@ -684,14 +684,13 @@ sub hwdetect_getsound {
 	eval { @probed_cards = hwdetect_get_mediatype('MULTIMEDIA_AUDIO'); };
 	print scalar(@probed_cards)." found";
 	scalar @probed_cards ? print_success() : print_failed();
-	system("rm -rf /etc/rc.d/rc?.d/*alsa /etc/rc.d/rc?.d/sound") unless (scalar(@probed_cards));
+	system("rm -rf /etc/rc.d/rc?.d/*alsa /etc/rc.d/rc?.d/sound") unless (scalar(@probed_cards) || $probe);
 	my $num = 0;
 	foreach my $card (@probed_cards) {
 		my ($probed_vendor, $probed_desc) = split(/\|/, $card->{description});
 		my $driver = $card->{driver};
-		$driver = $cmdline{'sound'} if (defined($cmdline{'sound'}));
-		$driver = $cmdline{sound$num} if (defined($cmdline{sound$num}));
-		
+		$driver = $cmdline{'sound'} if (defined($cmdline) && defined($cmdline{'sound'}));
+		$driver = $cmdline{sound$num} if (defined($cmdline) && defined($cmdline{sound$num}));
 		modules::add_alias("sound-slot-$num", $driver);
 		print "modules::add_alias('sound-slot-$num', '$driver')\n" if ($debug);
 		if ($card->{options} && ($driver eq $card->{driver})) {
@@ -718,13 +717,13 @@ sub hwdetect_getnetwork {
 	eval { @probed_cards = hwdetect_get_mediatype('NETWORK_ETHERNET|NETWORK_OTHER'); };
 	print scalar(@probed_cards)." found";
 	scalar @probed_cards ? print_success() : print_failed();
-	system("rm -rf /etc/rc.d/rc?.d/*network") unless (scalar(@probed_cards));
+	system("rm -rf /etc/rc.d/rc?.d/*network") unless (scalar(@probed_cards) || $probe);
 	my $num = 0;
 	foreach my $card (@probed_cards) {
 		my ($probed_vendor, $probed_desc) = split(/\|/, $card->{description});
 		my $driver = $card->{driver};
-		$driver = $cmdline{'eth'} if (defined($cmdline{'eth'}));
-		$driver = $cmdline{eth$num} if (defined($cmdline{eth$num}));
+		$driver = $cmdline{'eth'} if (defined($cmdline) && defined($cmdline{'eth'}));
+		$driver = $cmdline{eth$num} if (defined($cmdline) && defined($cmdline{eth$num}));
 		
 		modules::add_alias("eth$num", $driver) unless ($probe);
 		print "modules::add_alias('eth$num', '$driver')\n" if ($debug);
