--- a/livecdfs/Makefile
+++ b/livecdfs/Makefile
@@ -1,10 +1,10 @@
-# $Id: Makefile,v 1.4 2004/01/22 08:43:15 jaco Exp $
+# $Id: Makefile,v 1.5 2004/01/22 15:20:03 jaco Exp $
 
 include Rules.mk
 
 all: $(LIBRARY)
 
-$(LIBRARY): $(OBJECTS)
+$(LIBRARY): $(OBJECTS) 
 	$(CC) -shared -Wl,-soname -Wl,$(LIBRARY).0.0 -o $(LIBRARY).0.0.0 $(OBJECTS)
 	$(LN) -sf $(LIBRARY).0.0.0 $(LIBRARY).0.0
 	$(LN) -sf $(LIBRARY).0.0.0 $(LIBRARY)
@@ -16,7 +16,7 @@ install:
 	$(MKDIR) -p $(DESTDIR)/$(LIBDIR)
 	$(CP) -a $(LIBRARY)* $(DESTDIR)/$(LIBDIR)
 	
-.cpp.o:
+.cpp.o: $(INCLUDES)
 	$(CXX) $(CXXFLAGS) -c -o $@ $<
 
 .c.o:
