--- a/mklivecd/src/hwdetect.in
+++ b/mklivecd/src/hwdetect.in
@@ -21,7 +21,7 @@
 # Adapted for mklivecd from the MiniCD (http://www.linuxminicd.org) hwdetect script
 # The latest version of this script can be found at http://livecd.berlios.de
 #
-# $Id: hwdetect.in,v 1.104 2004/01/23 08:45:36 jaco Exp $
+# $Id: hwdetect.in,v 1.105 2004/01/24 08:59:19 jaco Exp $
 #
 
 use lib qw(/usr/lib/libDrakX);
@@ -53,7 +53,6 @@ use MDK::Common::File;
 use MDK::Common::System;
 
 ### global constants
-my $SCRIPT_DESC    = "hardware detection";
 my $SCRIPT_NAME    = "hwdetect";
 my $SCRIPT_VER     = "@MKLIVECDVER@";
 my $DEF_KEYBOARD   = "@DEF_KEYBOARD@";
@@ -68,6 +67,9 @@ my $COLOR_YELLOW   = $ESC."1;33m";
 my $COLOR_NORMAL   = $ESC."0;39m";
 
 ### global varibles
+my $lang          = 0;
+my %languages;
+my %strings;
 my $debug         = 0;
 my $probe         = 0;
 my $fdisk         = undef;
@@ -122,36 +124,36 @@ sub move_down_lines {
 
 sub print_success {
 	print $MOVE_TO_COL if (!$debug);
-	print "[  ";
+	print "[";
 	print $COLOR_GREEN if (!$debug);
-	print "OK";
+	print getStr('OK');
 	print $COLOR_NORMAL if (!$debug);
-	print "  ]\n";
+	print "]\n";
 }
 
 sub print_loaded {
 	print $MOVE_TO_COL if (!$debug);
 	print "[";
 	print $COLOR_GREEN if (!$debug);
-	print "LOADED";
+	print getStr('LOADED');
 	print $COLOR_NORMAL if (!$debug);
 	print "]\n";
 }
 
 sub print_warning {
 	print $MOVE_TO_COL if (!$debug);
-	print "[ ";
+	print "[";
 	print $COLOR_YELLOW if (!$debug);
-	print "WARN";
+	print getStr('WARN');
 	print $COLOR_NORMAL if (!$debug);
-	print " ]\n";
+	print "]\n";
 }
 
 sub print_failed {
 	print $MOVE_TO_COL if (!$debug);
 	print "[";
 	print $COLOR_RED if (!$debug);
-	print "FAILED";
+	print getStr('FAILED');
 	print $COLOR_NORMAL if (!$debug);
 	print "]\n";
 }
@@ -210,14 +212,22 @@ sub hwdetect_init {
 	select(STDOUT);
 	$| = 1;
 	open STDERR, '>', "/dev/null";
-	print "Starting $SCRIPT_DESC ($SCRIPT_NAME v$SCRIPT_VER): ";
 
+	# initialise our /proc/cmdline
 	%cmdline = map {
 		chomp;
 		my ($name, $value) = split(/=/);
 		$name => $value || 1;
 	} split(/ /, cat_('/proc/cmdline'));
 
+	# initialis our languages
+	%strings = getStrings();
+	%languages = getLanguages();
+	$lang = getMyLang();
+	
+	# start now
+	print getStr('script_start')." ($SCRIPT_NAME v$SCRIPT_VER): ";
+	
 	# get kernel version
 	$kernel_ver = get_exec("uname -r");
 	my $major = get_exec("expr \"$kernel_ver\" : \"\\([^.]\\+\\)\\..*\"");
@@ -370,27 +380,27 @@ sub read_proc_mem {
 }
 
 sub hwdetect_getmachine {
-	print "Detecting architecture: ";
+	print getStr('arch_probe').": ";
 	my @probed_cpus = ();
 	my $probed_mem = ();
 	eval { @probed_cpus = read_proc_cpu() };
 	eval { $probed_mem = read_proc_mem() };
-	print scalar(@probed_cpus)." CPUs, ".rmws($probed_mem->{MemTotal})." memory found";
+	print scalar(@probed_cpus)." ".getStr('arch_cpus').", ".rmws($probed_mem->{MemTotal})." ".getStr('arch_mem_found');
 	scalar @probed_cpus && $probed_mem ? print_success() : print_failed();
 	foreach my $cpu (@probed_cpus) {
 		hwdetect_loadmod('unknown', $cpu->{vendor_id}, $cpu->{'model name'}." ".$cpu->{'cpu MHz'}."MHz ".$cpu->{'cache size'});
 		print_hash($cpu) if ($debug);
 	}
 	if ($probed_mem) {
-		hwdetect_loadmod('unknown', "Available Memory", rmws($probed_mem->{MemFree})." of ".rmws($probed_mem->{MemTotal}));
-		hwdetect_loadmod('unknown', "Available Swap", rmws($probed_mem->{SwapFree})." of ".rmws($probed_mem->{SwapTotal})) if ($haveswap > 0);
+		hwdetect_loadmod('unknown', getStr('avail_mem'), rmws($probed_mem->{MemFree})." ".getStr('of_mem')." ".rmws($probed_mem->{MemTotal}));
+		hwdetect_loadmod('unknown', getStr('avail_swap'), rmws($probed_mem->{SwapFree})." ".getStr('of_mem')." ".rmws($probed_mem->{SwapTotal})) if ($haveswap > 0);
 		print_hash($probed_mem) if ($debug);
 	}
 	set_progress();
 }
 
 sub hwdetect_probepci() {
-	print "Probing PCI controllers: ";
+	print getStr('pci_probe').": ";
 	my @all_pci = ();
 	my @all_bridge = ();
 	my %pciid;
@@ -434,9 +444,9 @@ sub hwdetect_probepci() {
 
 sub hwdetect_initpcmcia() {
 	if (($havepcmcia > 0) && !defined($cmdline{'nopcmcia'})) {
-		print "Initialising PCMCIA controllers: ";
+		print getStr('pcmcia_init').": ";
 		print_success();
-		print "    Loading base PCMCIA modules: ";
+		print "    ".getStr('pcmcia_load').": ";
 		my $num = 0;
 		my @modules = ('ds');
 		$num += modprobe("-q", $_) foreach (@modules);
@@ -450,7 +460,7 @@ sub hwdetect_initpcmcia() {
 
 sub hwdetect_initusb() {
 	if (($haveusb > 0) && !defined($cmdline{'nousb'})) {
-		print "Initialising USB controllers: ";
+		print getStr('usb_init').": ";
 		if (-e '/proc/bus/usb') {
 			print_success();
 			if (is_mounted('/proc/bus/usb')) {
@@ -458,12 +468,12 @@ sub hwdetect_initusb() {
 				$usbfstab = 1;
 			}
 			else {
-				$usbfstab = mount("    Mounting USB filesystem: ", "-n", "usbdevfs", "none", "/proc/bus/usb");
+				$usbfstab = mount("    ".getStr('usb_mount').": ", "-n", "usbdevfs", "none", "/proc/bus/usb");
 			}
 
 			### load the usb modules that are not loaded automatically
 			# "printer" should be in as well? (does cups stuff :(
-			print "    Loading base USB modules: ";
+			print "    ".getStr('usb_load').": ";
 			my $num = 0;
 			my @modules = $kernel26 ? ('input', 'usb-storage', 'visor') : ('input', 'mousedev', 'keybdev', 'usb-storage', 'visor');
 			$num += modprobe("-q", $_) foreach (@modules);
@@ -479,13 +489,13 @@ sub hwdetect_initusb() {
 sub hwdetect_deinitusb() {
 	if (($haveusb > 0) &&
 	    -e '/proc/bus/usb' && !defined($cmdline{'nousb'})) {
-		umount("Unmounting USB filesystem", "/proc/bus/usb") if ($ownprocusb > 0);
+		umount(getStr('usb_umount'), "/proc/bus/usb") if ($ownprocusb > 0);
 	}
 	set_progress();
 }
 
 sub hwdetect_probeall {
-	print "Probing devices: ";
+	print getStr('all_probe').": ";
 	@all_devices = ();
 	eval { detect_devices::probeSerialDevices(); };
 	eval { @all_devices = detect_devices::probeall(); };
@@ -494,7 +504,7 @@ sub hwdetect_probeall {
 }
 
 sub hwdetect_getkeyb {
-	print "Selecting keyboard: ";
+	print getStr('keyboard_probe').": ";
 	my $probed_keyb = { KEYBOARD => $cmdline{'keyb'} };
 	my $probed_desc = keyboard::keyboard2text($probed_keyb);
 	unless (defined($probed_desc)) {
@@ -508,7 +518,7 @@ sub hwdetect_getkeyb {
 }
 
 sub hwdetect_getmouse {
-	print "Detecting mouse: ";
+	print getStr('mouse_probe').": ";
 	my $probed_vendor = "";
 	my $probed_desc = "";
 	my $device = undef;
@@ -534,10 +544,10 @@ sub hwdetect_getmouse {
 }
 
 sub hwdetect_getvideo {
-	print "Detecting video cards: ";
+	print getStr('video_probe').": ";
 	my @probed_cards = ();
 	eval { @probed_cards = Xconfig::card::probe(); };
-	print scalar(@probed_cards)." found";
+	print scalar(@probed_cards)." ".getStr('found');
 	my $probed_card = undef;
 	if (scalar @probed_cards) {
 		print_success();
@@ -601,7 +611,7 @@ sub hwdetect_getgenericmonitor() {
 
 sub hwdetect_getmonitor {
 	my ($rawX) = @_;
-	print "Selecting monitor: ";
+	print getStr('monitor_probe').": ";
 	my $probed_monitor = undef;
 
 	# try to get a monitor via DDC
@@ -639,7 +649,7 @@ sub hwdetect_getxfree {
 	Xconfig::screen::configure($rawX, $def_card);
 
 	# detect a resolution
-	print "Selecting resolution: ";
+	print getStr('resolution_probe').": ";
 	$rawX->{default_depth} = defined($cmdline{'xbpp'}) ? $cmdline{'xbpp'} : 16;
 	my $resolution_wanted = undef;
 	if (defined($cmdline{'xres'})) {
@@ -670,7 +680,7 @@ sub hwdetect_getxfree {
 	hwdetect_loadmod('unknown', $resolution->{X}."x".$resolution->{Y}, $resolution->{Depth}." bpp", 0);
 
 	unless ($probe) {
-		print "Writing X configuration: ";
+		print getStr('x_write').": ";
 		eval { mouse::write(undef, $def_mouse); };
 		eval { keyboard::write($def_keyboard); };
 		eval { $rawX->write() and print_success(); } or print_failed();
@@ -681,9 +691,9 @@ sub hwdetect_getxfree {
 sub hwdetect_getsound {
 	my @probed_cards = ();
 	unless (defined($cmdline{'nosound'})) {
-		print "Detecting sound cards: ";
+		print getStr('sound_probe').": ";
 		eval { @probed_cards = hwdetect_get_mediatype('MULTIMEDIA_AUDIO'); };
-		print scalar(@probed_cards)." found";
+		print scalar(@probed_cards)." ".getStr('found');
 		scalar @probed_cards ? print_success() : print_failed();
 		my $num = 0;
 		foreach my $card (@probed_cards) {
@@ -716,9 +726,9 @@ sub hwdetect_getsound {
 sub hwdetect_getnetwork {
 	my @probed_cards = ();
 	unless (defined($cmdline{'nonetwork'})) {
-		print "Detecting network cards: ";
+		print getStr('network_probe').": ";
 		eval { @probed_cards = hwdetect_get_mediatype('NETWORK_ETHERNET|NETWORK_OTHER'); };
-		print scalar(@probed_cards)." found";
+		print scalar(@probed_cards)." ".getStr('found');
 		scalar @probed_cards ? print_success() : print_failed();
 		my $num = 0;
 		foreach my $card (@probed_cards) {
@@ -741,10 +751,10 @@ sub hwdetect_getnetwork {
 }
 
 sub hwdetect_getprinters {
-	print "Detecting local printers: ";
+	print getStr('printer_probe').": ";
 	my @probed_printers = ();
 	#eval { require printer::detect; @probed_printers = local_detect(); };
-	print scalar(@probed_printers)." found";
+	print scalar(@probed_printers)." ".getStr('found');
 	scalar @probed_printers ? print_success() : print_failed();
 	system("rm -rf /etc/rc.d/rc?.d/*cups") unless (scalar(@probed_printers));
 	foreach my $printer (@probed_printers) {
@@ -754,17 +764,17 @@ sub hwdetect_getprinters {
 }
 
 sub hwdetect_getserial {
-	print "Detecting serial devices: ";
+	print getStr('serial_probe').": ";
 	my @probed_devices = ();
-	print scalar(@probed_devices)." found";
-	print " (not implemented)";
+	print scalar(@probed_devices)." ".getStr('found');
+	print " ".getStr('not_impl');
 	print_warning();
 	set_progress();
 }
 
 sub hwdetect_getusb {
 	if (-e '/proc/bus/usb/devices' && !defined($cmdline{'nousb'})) {
-		print "Detecting USB devices: ";
+		print getStr('usb_probe').": ";
 		my @probed_devices = ();
 		eval { @probed_devices = hwdetect_get_bustype('USB'); };
 		my @usable_devices = ();
@@ -775,7 +785,7 @@ sub hwdetect_getusb {
 				push(@usable_devices, $device);
 			}
 		}
-		print scalar(@usable_devices) . " found";
+		print scalar(@usable_devices) . " ".getStr('found');
 		scalar @probed_devices ? print_success() : print_failed();
 		foreach my $device (@usable_devices) {
 			my ($probed_vendor, $probed_desc) = split(/\|/, $device->{description});
@@ -793,7 +803,7 @@ sub hwdetect_all {
 }
 
 sub hwdetect_readconf {
-	print "Reading modules configuration: ";
+	print getStr('mod_read').": ";
 	modules::mergein_conf('/etc/modules.conf') if -r '/etc/modules.conf';
 	print_success();
 	set_progress();
@@ -801,7 +811,7 @@ sub hwdetect_readconf {
 
 sub hwdetect_writeconf {
 	unless ($probe) {
-		print "Writing modules configuration: ";
+		print getStr('mod_write').": ";
 		system(":> $prefix/etc/modules.conf"); # clear first
 		system(":> $prefix/etc/modprobe.conf"); # clear first
 		$modules::prefix = $prefix;
@@ -957,7 +967,7 @@ my %fsopts = (
 
 sub hwdetect_getpersistent {
 	my (%devs) = @_;
-	print "    Finding persistent partitions: ";
+	print "    ".getStr('disk_persist').": ";
 	my $mymnt   = "/tmp/hwdetect.mnt";
 	my $persist = "$mymnt/livecd.mnt";
 	my $loopmnt = "/tmp/hwdetect.img";
@@ -1020,7 +1030,7 @@ my %all_devs = ();
 my $numusb = 0;
 
 sub hwdetect_getdisks {
-	print "Detecting disk drives/partitions: ";
+	print getStr('disk_probe').": ";
 	my $fsopt_set = $fsopt_user;
 	$fsopt_set .= ($cmdline{'fstab'} =~ /ro/) ? ",".$fsopt_ro : ",".$fsopt_rw;
 	$fsopt_set .= ($cmdline{'fstab'} =~ /noauto/) ? ",".$fsopt_noauto : ",".$fsopt_auto;
@@ -1230,7 +1240,7 @@ sub hwdetect_getdisks {
 	
 	$num = 0;
 	$num++ foreach (keys %all_devs);
-	print "$num found";
+	print "$num ".getStr('found');
 	print_success();
 	set_progress();
 }
@@ -1239,13 +1249,13 @@ sub hwdetect_getdisks {
 # write the disk stuff
 sub hwdetect_writedisks {
 	unless ($probe) {
-		print "Writing partition configuration:\n";
+		print getStr('disk_write').":\n";
 		# get persistent partitions and set their mountpoints,
 		# and relevant options
 		hwdetect_getpersistent(%all_devs);
 
 		# create mountpoints
-		print "    Creating device mountpoints: ";
+		print "    ".getStr('disk_create').": ";
 		my $cmd;
 		my $drive = 'c';
 		foreach my $dev (sort keys %all_devs) {
@@ -1267,7 +1277,7 @@ sub hwdetect_writedisks {
 		system("mkdir -p $prefix/etc/livecd/hwdetect/");
 		print "    Writing $prefix/etc/fstab: ";
 		open FSTAB, '>>', "$prefix/etc/fstab";
-		print FSTAB "\n### entries below this line were automatically added by $SCRIPT_NAME v$SCRIPT_VER\n";
+		print FSTAB "\n### ".getStr('disk_fstab_info')." $SCRIPT_NAME v$SCRIPT_VER\n";
 		open INFO, '>', "$prefix/etc/livecd/hwdetect/mounts.cfg";
 		print FSTAB "\n# USB\nnone\t/proc/bus/usb\tusbdevfs\tdefaults\t0 0\n" if ($usbfstab);
 		foreach my $dev (sort keys %all_devs) {
@@ -1298,7 +1308,7 @@ sub hwdetect_writedisks {
 			}
 
 			if ($all_devs{$dev}->{loop}) {
-				my $entry = "# loop image for above\n";
+				my $entry = "# ".getStr('disk_fstab_loop')."\n";
 				$entry .= $all_devs{$dev}->{mount}."/livecd.img\t";
 				$entry .= $all_devs{$dev}->{loop}."\t";
 				$entry .= "ext2\t";
@@ -1335,7 +1345,7 @@ sub hwdetect_writedisks {
 # start all swap partitions
 sub hwdetect_swapon {
 	if ($haveswap > 0) {
-		print "Activating swap partitions: ";
+		print getStr('swap_activate').": ";
 		system("/sbin/swapon -a -e") ? print_failure() : print_success();
 	}
 	set_progress();
@@ -1387,3 +1397,4 @@ MAIN: {
 	hwdetect_deinitusb() unless ($fdisk);
 	hwdetect_deinit();
 }
+
