--- a/mklivecd/src/hwdetect.in
+++ b/mklivecd/src/hwdetect.in
@@ -21,7 +21,7 @@
 # Adapted for mklivecd from the MiniCD (http://www.linuxminicd.org) hwdetect script
 # The latest version of this script can be found at http://livecd.berlios.de
 #
-# $Id: hwdetect.in,v 1.106 2004/01/24 09:30:03 jaco Exp $
+# $Id: hwdetect.in,v 1.107 2004/01/24 09:44:09 jaco Exp $
 #
 
 use lib qw(/usr/lib/libDrakX);
@@ -590,6 +590,7 @@ sub hwdetect_getvideo {
 			description => 'Linux|Default Framebuffer Device', 
 			VideoRam    => 4096
 		};
+		$probed_card->{Driver} = $cmdline{'xdrv'} if (defined($cmdline{'xdrv'}));
 		my ($probed_vendor, $probed_desc) = split(/\|/, $card->{description});
 		hwdetect_loadmod('unknown', $probed_vendor, $card->{card_name});
 	}
