--- a/livecdfs/livecdfs.spec.in
+++ b/livecdfs/livecdfs.spec.in
@@ -1,4 +1,4 @@
-# $Id: livecdfs.spec.in,v 1.2 2004/01/24 12:11:08 jaco Exp $
+# $Id: livecdfs.spec.in,v 1.3 2004/01/24 12:14:37 jaco Exp $
 
 %define name	livecdfs
 %define version	@LIVECDFSVER@
@@ -30,9 +30,9 @@ to mimic writing to a non-writable medium.
 
 %build
 %if %{build_debug}
-	%make EXTRA_CXXFLAGS="-DDEBUG"
+	%make EXTRA_CFLAGS="-O2 -g" EXTRA_CXXFLAGS="-O2 -g -DDEBUG"
 %else
-	%make
+	%make EXTRA_CFLAGS="-O2 -g"
 %endif
 
 %install
