--- a/mklivecd/src/hwdetect.in
+++ b/mklivecd/src/hwdetect.in
@@ -21,7 +21,7 @@
 # Adapted for mklivecd from the MiniCD (http://www.linuxminicd.org) hwdetect script
 # The latest version of this script can be found at http://livecd.berlios.de
 #
-# $Id: hwdetect.in,v 1.108 2004/01/24 09:54:04 jaco Exp $
+# $Id: hwdetect.in,v 1.109 2004/01/24 14:23:53 jaco Exp $
 #
 
 use lib qw(/usr/lib/libDrakX);
@@ -1002,9 +1002,9 @@ sub hwdetect_getpersistent {
 							umount(undef, $loopmnt);
 						}
 
+						$devs{$dev}->{loop} = $popts{loop};
 						$devs{$dev}->{opt} = $fsopt_fullrw;
 						$devs{$dev}->{persisted} = 1;
-						$devs{$dev}->{loop} = $popts{mount};
 					}
 				}
 				elsif (!$fdisk && $cmdline{'home'} =~ /usb/ && $devs{$dev}->{usb}) {
