Make sound{x} and eth{x} finally work (without crashing)

--- a/mklivecd/src/hwdetect.in
+++ b/mklivecd/src/hwdetect.in
@@ -21,7 +21,7 @@
 # Adapted for mklivecd from the MiniCD (http://www.linuxminicd.org) hwdetect script
 # The latest version of this script can be found at http://livecd.berlios.de
 #
-# $Id: hwdetect.in,v 1.112 2004/01/25 17:38:09 jaco Exp $
+# $Id: hwdetect.in,v 1.113 2004/01/25 17:59:07 jaco Exp $
 #
 
 use lib qw(/usr/lib/libDrakX);
@@ -706,9 +706,10 @@ sub hwdetect_getsound {
 		my $num = 0;
 		foreach my $card (@probed_cards) {
 			my ($probed_vendor, $probed_desc) = split(/\|/, $card->{description});
+			my $sndnum = "sound$num";
 			my $driver = $card->{driver};
-			$driver = $cmdline{'sound'} if (defined(%cmdline) && defined($cmdline{'sound'}));
-			$driver = $cmdline{sound$num} if (defined(%cmdline) && defined($cmdline{sound$num}));
+			$driver = $cmdline{'sound'} if (defined($cmdline{'sound'}));
+			$driver = $cmdline{$sndnum} if (defined($cmdline{$sndnum}));
 			modules::add_alias("sound-slot-$num", $driver);
 			print "modules::add_alias('sound-slot-$num', '$driver')\n" if ($debug);
 			if ($card->{options} && ($driver eq $card->{driver})) {
@@ -741,9 +742,10 @@ sub hwdetect_getnetwork {
 		my $num = 0;
 		foreach my $card (@probed_cards) {
 			my ($probed_vendor, $probed_desc) = split(/\|/, $card->{description});
+			my $ethnum = "eth$num";
 			my $driver = $card->{driver};
-			$driver = $cmdline{'eth'} if (defined(%cmdline) && defined($cmdline{'eth'}));
-			$driver = $cmdline{eth$num} if (defined(%cmdline) && defined($cmdline{eth$num}));
+			$driver = $cmdline{'eth'} if (defined($cmdline{'eth'}));
+			$driver = $cmdline{$ethnum} if (defined($cmdline{$ethnum}));
 			
 			modules::add_alias("eth$num", $driver) unless ($probe);
 			print "modules::add_alias('eth$num', '$driver')\n" if ($debug);
