Windows mounts created in /mnt (as they should be)

--- a/mklivecd/src/hwdetect.in
+++ b/mklivecd/src/hwdetect.in
@@ -21,7 +21,7 @@
 # Adapted for mklivecd from the MiniCD (http://www.linuxminicd.org) hwdetect script
 # The latest version of this script can be found at http://livecd.berlios.de
 #
-# $Id: hwdetect.in,v 1.116 2004/01/26 07:59:12 jaco Exp $
+# $Id: hwdetect.in,v 1.117 2004/01/26 08:47:20 jaco Exp $
 #
 
 use lib qw(/usr/lib/libDrakX);
@@ -1300,7 +1300,7 @@ sub hwdetect_writedisks {
 				if ($all_devs{$dev}->{media} =~ /hd/ &&
 				    ($all_devs{$dev}->{type} =~ /ntfs/ ||
 				     $all_devs{$dev}->{type} =~ /vfat/)) {
-					$all_devs{$dev}->{mount} = "win_".$drive;
+					$all_devs{$dev}->{mount} = "/mnt/win_".$drive;
 					$drive++;
 					$mount = $all_devs{$dev}->{mount};
 				}
